[gd_scene load_steps=16 format=3 uid="uid://brtyeo34aq1w"]

[ext_resource type="Script" uid="uid://5akdnlthp7hf" path="res://scripts/enemy.gd" id="1_tmani"]
[ext_resource type="Texture2D" uid="uid://dm5vqcg5yc1xr" path="res://art/characters/little-bear-idle.png" id="2_4ra3w"]
[ext_resource type="Texture2D" uid="uid://ba30i28dd510c" path="res://art/characters/little-bear-walk.png" id="3_5uy6h"]
[ext_resource type="AudioStream" uid="uid://d2o4y834l648w" path="res://audio/enemy_engage.wav" id="4_5uy6h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c4w8v"]
atlas = ExtResource("2_4ra3w")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwavj"]
atlas = ExtResource("3_5uy6h")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nenq2"]
atlas = ExtResource("3_5uy6h")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_md484"]
atlas = ExtResource("3_5uy6h")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipns3"]
atlas = ExtResource("3_5uy6h")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_u7bsy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4w8v")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwavj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nenq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md484")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipns3")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_gqyht"]
radius = 28.1131

[sub_resource type="CircleShape2D" id="CircleShape2D_1wki1"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tmani"]

[sub_resource type="Gradient" id="Gradient_4ra3w"]
offsets = PackedFloat32Array(0.198052, 0.506494, 0.805195)
colors = PackedColorArray(1, 1, 1, 1, 0.568075, 0.568075, 0.568075, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5uy6h"]
gradient = SubResource("Gradient_4ra3w")
fill = 1
fill_from = Vector2(0.509174, 0.522936)
fill_to = Vector2(0.768349, 0.272936)

[node name="Enemy" type="CharacterBody2D"]
scale = Vector2(3, 3)
script = ExtResource("1_tmani")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_u7bsy")
animation = &"idle"
frame_progress = 0.76653

[node name="DetectionArea" type="Area2D" parent="."]
scale = Vector2(3, 3)
collision_layer = 2
collision_mask = 2

[node name="DetectionAreaCollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
scale = Vector2(3, 3)
shape = SubResource("CircleShape2D_gqyht")

[node name="EnemyCollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(3, 3)
shape = SubResource("CircleShape2D_1wki1")

[node name="EnemyHitbox" type="Area2D" parent="."]
scale = Vector2(3, 3)

[node name="EnemyhitboxCollisionShape2D" type="CollisionShape2D" parent="EnemyHitbox"]
scale = Vector2(3, 3)
shape = SubResource("CircleShape2D_tmani")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-0.125003, 2.3333)
scale = Vector2(3.45671, 3.13542)
energy = 0.75
texture = SubResource("GradientTexture2D_5uy6h")
texture_scale = 4.0

[node name="EnemyEngageAudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-0.333333, 0)
stream = ExtResource("4_5uy6h")
volume_db = 15.0

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="EnemyHitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="EnemyHitbox" to="." method="_on_enemy_hitbox_body_exited"]
